[package]
name = "tamashii"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version = "0.4.42", features = ["serde"]}
compio = {version = "0.17.0", features = ["macros", "process"]}
exn = "0.2.1"
hex = "0.4.3"
rand = "0.9.2"
serde = {version = "1.0.228",  features = ["derive"]}
serde_json = "1.0.149"
sha2 = "0.10.9"
tempfile = "3.24.0"
